// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logAllResults: false 1`] = `
"Installing promise@6.0.0
Installing promise@6.0.1
Installing promise@6.1.0
Testing promise@6.0.0
Testing promise@6.0.1
Testing promise@6.1.0

Failed promise@6.0.1
> example@ test <cwd>/.peer-tester/promise_v6.0.1
> node test

promise version v6.0.1
Simulating faield test for v6.0.1
npm ERR! Test failed.  See above for more details.
"
`;

exports[`logAllResults: false, color: true 1`] = `
"Installing promise@6.0.0
Installing promise@6.0.1
Installing promise@6.1.0
Testing promise@6.0.0
Testing promise@6.0.1
Testing promise@6.1.0
[31m
Failed promise@6.0.1[39m
> example@ test <cwd>/.peer-tester/promise_v6.0.1
> node test

promise version v6.0.1
Simulating faield test for v6.0.1
npm ERR! Test failed.  See above for more details.
"
`;

exports[`logAllResults: true 1`] = `
"Installing promise@6.0.0
Installing promise@6.0.1
Installing promise@6.1.0
Testing promise@6.0.0
Testing promise@6.0.1
Testing promise@6.1.0

Succeeded promise@6.0.0
> example@ test <cwd>/.peer-tester/promise_v6.0.0
> node test

promise version v6.0.0

Failed promise@6.0.1
> example@ test <cwd>/.peer-tester/promise_v6.0.1
> node test

promise version v6.0.1
Simulating faield test for v6.0.1
npm ERR! Test failed.  See above for more details.

Succeeded promise@6.1.0
> example@ test <cwd>/.peer-tester/promise_v6.1.0
> node test

promise version v6.1.0
"
`;
